--- a/index.html
+++ b/index.html
@@ -9,42 +9,35 @@
     <!-- sayfamız tarayıcı sekmesinde bu başlıkla görünecek. -->
     <title>Flex-Welcome-Page</title>
     <!-- css ve javascript dosyalarımızı HTML sayfamız ile bağlayalım. -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <!-- panel dediğimiz görsel kapsayıcılar için genel bir kapsayıcı oluşturduk. -->
     <div class="panels">
         <div class="panel panel1">
-            <p>Hey</p>
-            <p>Let's</p>
-            <p>Dance</p>
-          </div>
-
-          <div class="panel panel2">
-            <p>Give</p>
-            <p>Take</p>
-            <p>Receive</p>
-          </div>
-
-          <div class="panel panel3">
-            <p>Experience</p>
-            <p>It</p>
-            <p>Today</p>
-          </div>
-
-          <div class="panel panel4">
-            <p>Give</p>
-            <p>All</p>
-            <p>You can</p>
-          </div>
-
-          <div class="panel panel5">
-            <p>Life</p>
-            <p>In</p>
-            <p>Motion</p>
-          </div>
-    </div>
-    <!-- hala "panels" sınıfına sahip div içinde olduğumuzu unutmayın, Motion'dan sonra iki kapanış div tag'i olacak (</div>) -->
-  </body>
+          <p>Hey</p>
+          <p>Let's</p>
+          <p>Dance</p>
+        </div>
+        <div class="panel panel2">
+          <p>Give</p>
+          <p>Take</p>
+          <p>Receive</p>
+        </div>
+        <div class="panel panel3">
+          <p>Experience</p>
+          <p>It</p>
+          <p>Today</p>
+        </div>
+        <div class="panel panel4">
+          <p>Give</p>
+          <p>All</p>
+          <p>You can</p>
+        </div>
+        <div class="panel panel5">
+          <p>Life</p>
+          <p>In</p>
+          <p>Motion</p>
+        </div>
+      </div>
 </html>
